// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid has a label 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-labelledby="undefined_fieldDetails"
      class="ddm-label"
    >
      label
    </label>
    <div
      class="table-responsive"
    >
      <input
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-head-bordered table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      label
    </span>
  </div>
</div>
`;

exports[`Grid has a tip 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <div
      class="table-responsive"
    >
      <input
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-head-bordered table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
      <span
        class="form-help-text"
      >
        Type something
      </span>
    </div>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      Type something
    </span>
  </div>
</div>
`;

exports[`Grid has an id 1`] = `
<div>
  <div
    class="hide"
  >
    <div
      class="table-responsive"
    >
      <input
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-head-bordered table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="Id_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Grid is not editable 1`] = `
<div>
  <div
    class="hide"
  >
    <div
      class="table-responsive"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-head-bordered table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      disabled=""
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Grid is not required 1`] = `
<div>
  <div
    class="hide"
  >
    <div
      class="table-responsive"
    >
      <input
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          aria-required="false"
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-head-bordered table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Grid renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-labelledby="undefined_fieldDetails"
      class="ddm-label"
    >
      text
    </label>
    <div
      class="table-responsive"
    >
      <input
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-head-bordered table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      text
    </span>
  </div>
</div>
`;

exports[`Grid renders columns 1`] = `
<div>
  <div
    class="hide"
  >
    <div
      class="table-responsive"
    >
      <input
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-head-bordered table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
              <th
                class=""
              >
                col2
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col2"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Grid renders no columns when columns comes empty 1`] = `
<div>
  <div
    class="hide"
  >
    <div
      class="table-responsive"
    >
      <input
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-head-bordered table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Grid renders no rows when row comes empty 1`] = `
<div>
  <div
    class="hide"
  >
    <div
      class="table-responsive"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-head-bordered table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Grid renders rows 1`] = `
<div>
  <div
    class="hide"
  >
    <div
      class="table-responsive"
    >
      <input
        type="hidden"
        value=""
      />
      <input
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-head-bordered table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="fieldId"
            >
              <td
                class=""
              >
                row1
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row1, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="fieldId"
                      name="undefined_fieldId"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
            <tr
              class=""
              name="fieldId"
            >
              <td
                class=""
              >
                row2
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row2, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="fieldId"
                      name="undefined_fieldId"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;
